test/Harper/Tests/Good/issue028_tuples3.har
f :: (Integer, Integer) -> Bool;
f tup = match tup {
  (42, _) => true,
  (17, 37) => true,
  _ => false
};

main :: sideeffect -> ();
main = {
  eval printLn (f (42, 0)) ();
  eval printLn (f (0, 42)) ();
  eval printLn (f (17, 37)) ();
  eval printLn (f (42, 17)) ();
  eval printLn (f (37, 17)) ();
};