test/Harper/Tests/Bad/issue019_unitValInsteadOfLit.har
main :: sideeffect -> ();
main = {
  (unit :: ()) = ();
  eval printLn "Bang!" unit;
};